--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -150,10 +150,10 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Sales</span>
                 </a>
-                <a href="/admin/banners" class="nav-item">
-                    <i class="fas fa-image"></i>
-                    <span>Banners</span>
-                </a>
+                <a href="/admin/offer" class="nav-item">
+                  <i class="fas fa-gift"></i>
+                  <span>Offer</span>
+              </a>
             </ul>
         </div>
 
