--- a/views/admin/reports.ejs
+++ b/views/admin/reports.ejs
@@ -72,9 +72,9 @@
                     <i class="fas fa-chart-line"></i>
                     <span>Sales</span>
                 </a>
-                <a href="/admin/banners" class="nav-item">
-                    <i class="fas fa-image"></i>
-                    <span>Banners</span>
+                <a href="/admin/offer" class="nav-item">
+                    <i class="fas fa-gift"></i>
+                    <span>Offer</span>
                 </a>
             </ul>
         </div>
@@ -118,7 +118,7 @@
                     <th class="px-6 py-3 text-left text-sm font-semibold uppercase tracking-wider border border-gray-600">ID</th>
                     <th class="px-6 py-3 text-left text-sm font-semibold uppercase tracking-wider border border-gray-600">Orders</th>
                     <th class="px-6 py-3 text-left text-sm font-semibold uppercase tracking-wider border border-gray-600">Gross Amount</th>
-                    <th class="px-6 py-3 text-left text-sm font-semibold uppercase tracking-wider border border-gray-600">Offer Discount</th>
+
                     <th class="px-6 py-3 text-left text-sm font-semibold uppercase tracking-wider border border-gray-600">Coupon Discount</th>
                     <th class="px-6 py-3 text-left text-sm font-semibold uppercase tracking-wider border border-gray-600">Net Amount</th>
                 </tr>
@@ -129,7 +129,7 @@
                         <td class="px-6 py-4 whitespace-nowrap border border-gray-600"><%= index + 1 %></td>
                         <td class="px-6 py-4 whitespace-nowrap border border-gray-600"><%= order.totalOrders %></td>
                         <td class="px-6 py-4 whitespace-nowrap border border-gray-600">₹<%= order.grossAmount.toFixed(2) %></td>
-                        <td class="px-6 py-4 whitespace-nowrap border border-gray-600">₹<%= order.totalCouponDiscount.toFixed(2) %></td>
+                 
                         <td class="px-6 py-4 whitespace-nowrap border border-gray-600">₹<%= order.totalOfferDiscount.toFixed(2) %></td>
                         <td class="px-6 py-4 whitespace-nowrap border border-gray-600">₹<%= order.netAmount.toFixed(2) %></td>
                     </tr>
@@ -138,7 +138,7 @@
                     <td class="px-6 py-4 border border-gray-600">Total:</td>
                     <td class="px-6 py-4 border border-gray-600"><%= totals.totalOrders %></td>
                     <td class="px-6 py-4 border border-gray-600">₹<%= totals.grossAmount.toFixed(2) %></td>
-                    <td class="px-6 py-4 border border-gray-600">₹<%= totals.totalCouponDiscount.toFixed(2) %></td>
+                  
                     <td class="px-6 py-4 border border-gray-600">₹<%= totals.totalOfferDiscount.toFixed(2) %></td>
                     <td class="px-6 py-4 border border-gray-600">₹<%= totals.netAmount.toFixed(2) %></td>
                 </tr>
